tests/failures/f01_not_allowed_tag.rs
use pinny::tag;

#[tag(not_existent)]
#[test]
fn test_compilation_failure() {}

fn main() {}
